fixed policy spacing

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -136,6 +136,10 @@
   margin-top: 48px;
   margin-bottom: 8px;
 }
+.policyLinkWrapper {
+  margin-top: 48px;
+  margin-bottom: 8px;
+}
 .policyDivider {
   width: 1.5px;
   height: 20px;
